# abmac-lib

./: .gitignore  Cargo.toml  README.md
bytecast/: README.md
bytecast-macros/src/bytes/: from_bytes.rs  mod.rs  to_bytes.rs
bytecast/src/: serializer.rs  traits.rs
bytecast/src/impls/: alloc.rs  mod.rs
bytecast/src/tests/: alloc.rs  mod.rs
pebble/: Cargo.toml  README.md
pebble/src/manager/: branch.rs  branching.rs  pebble_manager.rs  recovery.rs
pebble/src/manager/cold/: parallel.rs  ring.rs
pebble/src/manager/warm/: cache.rs
pebble/src/tests/: branch.rs  manager.rs
spill-ring/: Cargo.toml  README.md
spill-ring-core/src/: lib.rs  ring.rs  tests.rs  traits.rs
spill-ring/benches/: chaining.rs  mpsc.rs  single_thread.rs  spsc.rs
spill-ring/examples/: compio_file_copy.rs  mpsc.rs
spill-ring/src/: builder.rs  index.rs  lib.rs  mpsc.rs  read.rs  ring.rs  spsc.rs
spill-ring/src/tests/: concurrency.rs  mod.rs  ring.rs
spout/src/impls/: bytecast_impls.rs
verdict/: Cargo.toml  README.md
verdict/examples/: basic.rs  bounded.rs  facet_json.rs  retry.rs  serde_json.rs
verdict/src/: actionable.rs  lib.rs  status.rs
verdict/src/heap/: context.rs  contextualized.rs  ext.rs  frame.rs  log_record.rs  mod.rs  retry.rs  sinks.rs
verdict/src/macros/: display_error.rs
verdict/src/tests/: alloc.rs  mod.rs
